--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.3.0",
     "clsx": "^2.1.1",
     "gray-matter": "^4.0.3",
     "next": "15.3.2",
