--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@react-pdf/renderer": "^4.3.0",
+    "@vercel/analytics": "^1.5.0",
     "clsx": "^2.1.1",
     "gray-matter": "^4.0.3",
     "next": "15.3.2",
