Extract PDF generation into reusable module
Add servePDF function for development mode and refactor build
script to use shared generatePdf utility. Convert build script
from TSX to TS since JSX is now handled in the extracted module.

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "predev": "tsx scripts/build-pdfs.tsx",
-    "prebuild": "tsx scripts/build-pdfs.tsx",
+    "predev": "tsx scripts/build-pdfs.ts",
+    "prebuild": "tsx scripts/build-pdfs.ts",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
